# CppGuideForDummies

./: CMakeLists.txt  README.md
CppForDummies/: CMakeLists.txt  README.md  main.cpp
CppForDummies/unit_1/: CQ.md  Namespaces.cpp  README.md  playground_1.cpp
CppForDummies/unit_2/: README.md  Solution.cpp  playground_2.cpp
LibrayExercise/: LibraryExample.cpp  LibraryExample.h
unit_1/: CQ.md  Namespaces.h  playground_1.cpp
unit_2/: CQ.md  README.md  Solution.h  playground_2.cpp
unit_3/: CQ.md  README.md  playground_3.cpp
unit_4/: CQ.md  README.md  playground_4.cpp
unit_5/: CQ.md  README.md  playground_5.cpp
unit_6/: CQ.md  README.md
unit_7/: CQ.md
